Thursday night progress
Pair coding with Tobias and Joe.  Closer to the client-side actually
authenticating with the server…

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,18 @@
+<!doctype html>
 <html>
 	<head>
 		<title>This is a private site</title>
 		<link href="bootstrap.min.css" rel="stylesheet">
+		<script src="build.js"></script>
+		<meta charset="utf-8">
 	</head>
 	<body>
 		<div class="center-block" style="width: 45em; margin-top: 4em">
 			<h1>Welcome!</h1>
 			<p class="lead">This is a private site.  To access it, log in with your email address.</p>
 			<div class="center-block" style="width: 30em; margin-top: 4em">
-				<input type="email" class="form-control" placeholder="Your email address">
-				<button type="submit" class="btn btn-primary" style="margin-top: 10px">Sign in</button>
+				<input id="emailAddressInput" type="email" class="form-control" placeholder="Your email address">
+				<button id="signInButton" type="button" class="btn btn-primary" style="margin-top: 10px">Sign in</button>
 			</div>
 		</div>
 	</body>
