--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 		<title>This is a private site</title>
 		<link href="bootstrap.min.css" rel="stylesheet">
 		<script src="build.js"></script>
+		<script src="session.js"></script>
 		<meta charset="utf-8">
 	</head>
 	<body>
@@ -11,8 +12,10 @@
 			<h1>Welcome!</h1>
 			<p class="lead">This is a private site.  To access it, log in with your email address.</p>
 			<div class="center-block" style="width: 30em; margin-top: 4em">
-				<input id="emailAddressInput" type="email" class="form-control" placeholder="Your email address">
-				<button id="signInButton" type="button" class="btn btn-primary" style="margin-top: 10px">Sign in</button>
+				<form>
+					<input id="emailAddressInput" type="email" class="form-control" placeholder="Your email address">
+					<button id="signInButton" type="submit" class="btn btn-primary" style="margin-top: 10px">Sign in</button>
+				</form>
 			</div>
 		</div>
 	</body>
