Warning on too many auth requests and stuff

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
 					<button id="signInButton" type="submit" class="btn btn-primary" style="margin-top: 10px">Sign in</button>
 				</form>
 			</div>
+			<div id="warning" class="alert alert-dismissable alert-warning" style="margin-top: 4em">
+				This be a warning!
+			</div>
 		</div>
 	</body>
 </html>
