--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,11 @@
 					<button id="signInButton" type="submit" class="btn btn-primary" style="margin-top: 10px">Sign in</button>
 				</form>
 			</div>
-			<div id="warning" class="alert alert-dismissable alert-warning" style="margin-top: 4em">
+			<div id="warning" class="alert alert-warning" style="margin-top: 4em">
 				This be a warning!
+			</div>
+			<div id="info" class="alert alert-info" style="margin-top: 4em">
+				Here be info!
 			</div>
 		</div>
 	</body>
